# microservices

./: .env  Cargo.toml  README.md
client-side/: Cargo.toml
client-side/src/: main.rs
client-side/src/config/: conf.rs
client-side/src/controller/: mod.rs  welcome_controller.rs
client-side/src/error/: error.rs
client-side/src/model/dto/: generic_dto.rs  mod.rs  student.rs
server-side/: Cargo.toml
server-side/src/: main.rs
server-side/src/config/: conf.rs
server-side/src/controller/: mod.rs  welcome_controller.rs
